comment and modify transformer code

--- a/train_transformer_ag_news.ipynb
+++ b/train_transformer_ag_news.ipynb
@@ -24,10 +24,11 @@
     "from transformers import AutoTokenizer\n",
     "from utils.data_utils import AG_NEWS_DATASET\n",
     "from utils.constants import *\n",
-    "from model.transformer import Transformer\n",
+    "# from model.transformer import Transformer\n",
     "from training import Learner\n",
     "\n",
     "from quantization.binarize import binarize\n",
+    "from quantization.transformer_raw import Transformer\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -35,10 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d3f25f80",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/alextrasza/opt/anaconda3/lib/python3.8/site-packages/torch/utils/data/datapipes/utils/common.py:24: UserWarning: Lambda function is not supported for pickle, please use regular python function or functools.partial instead.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# load dataset\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-uncased\")\n",
@@ -152,63 +162,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "ae74afd4",
+   "execution_count": 6,
+   "id": "5f0a1e37",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from quantization.binarize import BinarizedLinear\n",
-    "import torch"
+    "# load dataset\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-uncased\")\n",
+    "train_dl, test_dl = AG_NEWS_DATASET(tokenizer, batch_size = BATCH_SIZE).load_data()\n",
+    "model = Transformer(4, vocab=tokenizer.vocab_size)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9d1d2e25",
+   "id": "92608539",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_input = torch.ones((2,64))\n",
-    "layer = BinarizedLinear(64,10)"
+    "model_b = binarize(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "825951ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_out = layer(test_input)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "d8a9b6aa",
+   "execution_count": 19,
+   "id": "782f38f3",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[  8.,   4.,  -6., -10.,  12.,   4., -12.,  -2.,  -8.,   0.],\n",
-       "        [  8.,   4.,  -6., -10.,  12.,   4., -12.,  -2.,  -8.,   0.]],\n",
-       "       grad_fn=<BinaryLinearFunctionBackward>)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transformer(\n",
+      "  (input_embeddings): Embeddings(\n",
+      "    (token_embedding): Embedding(30522, 512)\n",
+      "    (pos_embedding): Embedding(512, 512)\n",
+      "  )\n",
+      "  (input_encodings): PositionalEncoding(\n",
+      "    (dropout): Dropout(p=0.1, inplace=False)\n",
+      "  )\n",
+      "  (sublayer_attention): ModuleList(\n",
+      "    (0): sublayerConnectionAttention(\n",
+      "      (multiheads): MultiheadAttention(\n",
+      "        (output): Linear(in_features=512, out_features=512, bias=True)\n",
+      "        (dropout): Dropout(p=0.1, inplace=False)\n",
+      "      )\n",
+      "      (layernorm): LayerNorm()\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "    (1): sublayerConnectionAttention(\n",
+      "      (multiheads): MultiheadAttention(\n",
+      "        (output): Linear(in_features=512, out_features=512, bias=True)\n",
+      "        (dropout): Dropout(p=0.1, inplace=False)\n",
+      "      )\n",
+      "      (layernorm): LayerNorm()\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "    (2): sublayerConnectionAttention(\n",
+      "      (multiheads): MultiheadAttention(\n",
+      "        (output): Linear(in_features=512, out_features=512, bias=True)\n",
+      "        (dropout): Dropout(p=0.1, inplace=False)\n",
+      "      )\n",
+      "      (layernorm): LayerNorm()\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "    (3): sublayerConnectionAttention(\n",
+      "      (multiheads): MultiheadAttention(\n",
+      "        (output): Linear(in_features=512, out_features=512, bias=True)\n",
+      "        (dropout): Dropout(p=0.1, inplace=False)\n",
+      "      )\n",
+      "      (layernorm): LayerNorm()\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "    (4): sublayerConnectionAttention(\n",
+      "      (multiheads): MultiheadAttention(\n",
+      "        (output): Linear(in_features=512, out_features=512, bias=True)\n",
+      "        (dropout): Dropout(p=0.1, inplace=False)\n",
+      "      )\n",
+      "      (layernorm): LayerNorm()\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "    (5): sublayerConnectionAttention(\n",
+      "      (multiheads): MultiheadAttention(\n",
+      "        (output): Linear(in_features=512, out_features=512, bias=True)\n",
+      "        (dropout): Dropout(p=0.1, inplace=False)\n",
+      "      )\n",
+      "      (layernorm): LayerNorm()\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "  )\n",
+      "  (sublayer_ffn): ModuleList(\n",
+      "    (0): sublayerConnectionFFN(\n",
+      "      (ffn): PositionalWiseFFN(\n",
+      "        (w_1): Linear(in_features=512, out_features=128, bias=True)\n",
+      "        (w_2): Linear(in_features=128, out_features=512, bias=True)\n",
+      "        (dropout): Dropout(p=0.1, inplace=False)\n",
+      "      )\n",
+      "      (layernorm): LayerNorm()\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "    (1): sublayerConnectionFFN(\n",
+      "      (ffn): PositionalWiseFFN(\n",
+      "        (w_1): Linear(in_features=512, out_features=128, bias=True)\n",
+      "        (w_2): Linear(in_features=128, out_features=512, bias=True)\n",
+      "        (dropout): Dropout(p=0.1, inplace=False)\n",
+      "      )\n",
+      "      (layernorm): LayerNorm()\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "    (2): sublayerConnectionFFN(\n",
+      "      (ffn): PositionalWiseFFN(\n",
+      "        (w_1): Linear(in_features=512, out_features=128, bias=True)\n",
+      "        (w_2): Linear(in_features=128, out_features=512, bias=True)\n",
+      "        (dropout): Dropout(p=0.1, inplace=False)\n",
+      "      )\n",
+      "      (layernorm): LayerNorm()\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "    (3): sublayerConnectionFFN(\n",
+      "      (ffn): PositionalWiseFFN(\n",
+      "        (w_1): Linear(in_features=512, out_features=128, bias=True)\n",
+      "        (w_2): Linear(in_features=128, out_features=512, bias=True)\n",
+      "        (dropout): Dropout(p=0.1, inplace=False)\n",
+      "      )\n",
+      "      (layernorm): LayerNorm()\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "    (4): sublayerConnectionFFN(\n",
+      "      (ffn): PositionalWiseFFN(\n",
+      "        (w_1): Linear(in_features=512, out_features=128, bias=True)\n",
+      "        (w_2): Linear(in_features=128, out_features=512, bias=True)\n",
+      "        (dropout): Dropout(p=0.1, inplace=False)\n",
+      "      )\n",
+      "      (layernorm): LayerNorm()\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "    (5): sublayerConnectionFFN(\n",
+      "      (ffn): PositionalWiseFFN(\n",
+      "        (w_1): Linear(in_features=512, out_features=128, bias=True)\n",
+      "        (w_2): Linear(in_features=128, out_features=512, bias=True)\n",
+      "        (dropout): Dropout(p=0.1, inplace=False)\n",
+      "      )\n",
+      "      (layernorm): LayerNorm()\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "  )\n",
+      "  (classifier): Classifier(\n",
+      "    (classifier): Linear(in_features=512, out_features=4, bias=True)\n",
+      "  )\n",
+      ")\n"
+     ]
     }
    ],
    "source": [
-    "test_out"
+    "print(model_b)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f0a1e37",
+   "id": "eaa65b44",
    "metadata": {},
    "outputs": [],
    "source": []
