--- a/train_transformer_ag_news.ipynb
+++ b/train_transformer_ag_news.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 60,
    "id": "2edbf7a2",
    "metadata": {},
    "outputs": [
@@ -38,10 +38,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 70,
    "id": "d3f25f80",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/torch/utils/data/datapipes/utils/common.py:25: UserWarning: Lambda function is not supported for pickle, please use regular python function or functools.partial instead.\n",
+      "  \"Lambda function is not supported for pickle, please use \"\n"
+     ]
+    }
+   ],
    "source": [
     "# load dataset\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-uncased\")\n",
@@ -52,6 +61,7 @@
     "                    vocab=tokenizer.vocab_size,\n",
     "                    h=BASELINE_MODEL_NUMBER_OF_HEADS,\n",
     "                    n_layers=BASELINE_MODEL_NUMBER_OF_LAYERS,\n",
+    "                    d_ff =512,\n",
     "                    n_class=4\n",
     "                   )\n",
     "model.model_name = 'transformer'\n",
@@ -81,107 +91,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 71,
    "id": "e7321ebf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# learner_ag_news.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "bc075a57",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0%|                                                    | 0/10 [00:00<?, ?it/s]"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current lr 1.00000e-04\n",
-      "Epoch: [0][0/3750]\tLoss 0.3273\tPrec@1 87.500\n",
-      "Epoch: [0][100/3750]\tLoss 3.6267\tPrec@1 34.220\n",
-      "Epoch: [0][200/3750]\tLoss 2.5518\tPrec@1 34.748\n",
-      "Epoch: [0][300/3750]\tLoss 2.1056\tPrec@1 38.694\n",
-      "Epoch: [0][400/3750]\tLoss 1.8062\tPrec@1 45.114\n",
-      "Epoch: [0][500/3750]\tLoss 1.5801\tPrec@1 51.166\n",
-      "Epoch: [0][600/3750]\tLoss 1.4141\tPrec@1 55.735\n",
-      "Epoch: [0][700/3750]\tLoss 1.2767\tPrec@1 59.816\n",
-      "Epoch: [0][800/3750]\tLoss 1.1698\tPrec@1 63.011\n",
-      "Epoch: [0][900/3750]\tLoss 1.0910\tPrec@1 65.365\n",
-      "Epoch: [0][1000/3750]\tLoss 1.0252\tPrec@1 67.386\n",
-      "Epoch: [0][1100/3750]\tLoss 0.9680\tPrec@1 69.213\n",
-      "Epoch: [0][1200/3750]\tLoss 0.9168\tPrec@1 70.785\n",
-      "Epoch: [0][1300/3750]\tLoss 0.8741\tPrec@1 72.067\n",
-      "Epoch: [0][1400/3750]\tLoss 0.8369\tPrec@1 73.238\n",
-      "Epoch: [0][1500/3750]\tLoss 0.8058\tPrec@1 74.184\n",
-      "Epoch: [0][1600/3750]\tLoss 0.7801\tPrec@1 74.977\n",
-      "Epoch: [0][1700/3750]\tLoss 0.7550\tPrec@1 75.792\n",
-      "Epoch: [0][1800/3750]\tLoss 0.7316\tPrec@1 76.496\n",
-      "Epoch: [0][1900/3750]\tLoss 0.7148\tPrec@1 77.001\n",
-      "Epoch: [0][2000/3750]\tLoss 0.6985\tPrec@1 77.488\n",
-      "Epoch: [0][2100/3750]\tLoss 0.6808\tPrec@1 78.079\n",
-      "Epoch: [0][2200/3750]\tLoss 0.6639\tPrec@1 78.609\n",
-      "Epoch: [0][2300/3750]\tLoss 0.6490\tPrec@1 79.057\n",
-      "Epoch: [0][2400/3750]\tLoss 0.6331\tPrec@1 79.583\n",
-      "Epoch: [0][2500/3750]\tLoss 0.6160\tPrec@1 80.127\n",
-      "Epoch: [0][2600/3750]\tLoss 0.6025\tPrec@1 80.545\n",
-      "Epoch: [0][2700/3750]\tLoss 0.5911\tPrec@1 80.881\n",
-      "Epoch: [0][2800/3750]\tLoss 0.5798\tPrec@1 81.206\n",
-      "Epoch: [0][2900/3750]\tLoss 0.5692\tPrec@1 81.530\n",
-      "Epoch: [0][3000/3750]\tLoss 0.5599\tPrec@1 81.807\n",
-      "Epoch: [0][3100/3750]\tLoss 0.5515\tPrec@1 82.054\n",
-      "Epoch: [0][3200/3750]\tLoss 0.5431\tPrec@1 82.314\n",
-      "Epoch: [0][3300/3750]\tLoss 0.5350\tPrec@1 82.585\n",
-      "Epoch: [0][3400/3750]\tLoss 0.5271\tPrec@1 82.835\n",
-      "Epoch: [0][3500/3750]\tLoss 0.5195\tPrec@1 83.062\n",
-      "Epoch: [0][3600/3750]\tLoss 0.5124\tPrec@1 83.285\n",
-      "Epoch: [0][3700/3750]\tLoss 0.5060\tPrec@1 83.491\n",
-      "Epoch[0] *Validation*: Prec@1 90.658\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 10%|████▎                                      | 1/10 [06:04<54:40, 364.45s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "current lr 1.00000e-04\n",
-      "Epoch: [1][0/3750]\tLoss 0.6588\tPrec@1 78.125\n",
-      "Epoch: [1][100/3750]\tLoss 0.8462\tPrec@1 80.136\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 10%|████▎                                      | 1/10 [06:23<57:30, 383.33s/it]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_8431/3461410955.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlearner_ag_news\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Transformer-Quantization/training.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Transformer-Quantization/training.py\u001b[0m in \u001b[0;36mtrain_step\u001b[0;34m(self, epoch, verbose)\u001b[0m\n\u001b[1;32m     79\u001b[0m             \u001b[0;31m# compute gradient and do SGD step\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 81\u001b[0;31m             \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     82\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/torch/_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    361\u001b[0m                 \u001b[0mcreate_graph\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    362\u001b[0m                 inputs=inputs)\n\u001b[0;32m--> 363\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    364\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    365\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    173\u001b[0m     Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n\u001b[1;32m    174\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 175\u001b[0;31m         allow_unreachable=True, accumulate_grad=True)  # Calls into the C++ engine to run the backward pass\n\u001b[0m\u001b[1;32m    176\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    177\u001b[0m def grad(\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Transformer(\n",
+      "  (input_embeddings): Embeddings(\n",
+      "    (token_embedding): Embedding(30522, 512)\n",
+      "    (pos_embedding): Embedding(512, 512)\n",
+      "  )\n",
+      "  (input_encodings): PositionalEncoding(\n",
+      "    (dropout): Dropout(p=0.1, inplace=False)\n",
+      "  )\n",
+      "  (sublayer_attention): ModuleList(\n",
+      "    (0): sublayerConnectionAttention(\n",
+      "      (multiheads): MultiheadAttention(\n",
+      "        (output): Linear(in_features=512, out_features=512, bias=True)\n",
+      "        (dropout): Dropout(p=0.1, inplace=False)\n",
+      "      )\n",
+      "      (layernorm): LayerNorm()\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "    (1): sublayerConnectionAttention(\n",
+      "      (multiheads): MultiheadAttention(\n",
+      "        (output): Linear(in_features=512, out_features=512, bias=True)\n",
+      "        (dropout): Dropout(p=0.1, inplace=False)\n",
+      "      )\n",
+      "      (layernorm): LayerNorm()\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "  )\n",
+      "  (sublayer_ffn): ModuleList(\n",
+      "    (0): sublayerConnectionFFN(\n",
+      "      (ffn): PositionalWiseFFN(\n",
+      "        (w_1): Linear(in_features=512, out_features=512, bias=True)\n",
+      "        (w_2): Linear(in_features=512, out_features=512, bias=True)\n",
+      "        (dropout): Dropout(p=0.1, inplace=False)\n",
+      "      )\n",
+      "      (layernorm): LayerNorm()\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "    (1): sublayerConnectionFFN(\n",
+      "      (ffn): PositionalWiseFFN(\n",
+      "        (w_1): Linear(in_features=512, out_features=512, bias=True)\n",
+      "        (w_2): Linear(in_features=512, out_features=512, bias=True)\n",
+      "        (dropout): Dropout(p=0.1, inplace=False)\n",
+      "      )\n",
+      "      (layernorm): LayerNorm()\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "  )\n",
+      "  (classifier): Classifier(\n",
+      "    (hidden): Linear(in_features=512, out_features=1024, bias=True)\n",
+      "    (classifier): Linear(in_features=512, out_features=4, bias=True)\n",
+      "  )\n",
+      ")\n"
      ]
     }
    ],
    "source": [
-    "learner_ag_news.train()"
+    "print(model)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "7d7a59c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.utils import count_memory_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "581cdf9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "71987216"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_memory_size(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "90a45c28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_embeddings: 7.5398301980263795\n",
+      "input_encodings: 0.0\n",
+      "sublayer_attention: 0.2502424793441764\n",
+      "sublayer_ffn: 0.49951314323458906\n",
+      "classifier: 0.25024437742123457\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = count_memory_size(model) - count_memory_size(model.input_embeddings)\n",
+    "for name, layer in model.named_children():\n",
+    "    print(f'{name}: {count_memory_size(layer)/total}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7efd0ba7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
