--- a/main.ipynb
+++ b/main.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "071a4240",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Train transformer"
    ]
@@ -12,7 +16,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "5d29b0aa",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -49,7 +57,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "d3f25f80",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -163,7 +175,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "e7321ebf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -752,7 +768,11 @@
   {
    "cell_type": "markdown",
    "id": "d4b755b6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Memory compute"
    ]
@@ -761,7 +781,11 @@
    "cell_type": "code",
    "execution_count": 67,
    "id": "07184be3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from utils.utils import count_memory_size"
@@ -771,7 +795,11 @@
    "cell_type": "code",
    "execution_count": 68,
    "id": "581cdf9e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -792,7 +820,11 @@
    "cell_type": "code",
    "execution_count": 69,
    "id": "90a45c28",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -816,7 +848,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7efd0ba7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -824,7 +860,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d0e0240c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
