--- a/main_quant.ipynb
+++ b/main_quant.ipynb
@@ -24,9 +24,13 @@
     "from utils.constants import *\n",
     "from model.transformer import Transformer as Transformer_origin\n",
     "from utils.training import Learner\n",
+    "from training_ema import Learner as ema_learner\n",
     "\n",
-    "from quantization.fully_quantize import Model\n",
+    "# from quantization.fully_quantize import Model\n",
     "from quantization.pytorch_api import ModelQuant\n",
+    "from quantization.transformer_raw import Transformer\n",
+    "from quantization.baseline import quantizer\n",
+    "from quantization.fully_quantize import Model as fullyQuantModel\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -42,19 +46,24 @@
     "train_dl, test_dl = AG_NEWS_DATASET(tokenizer).load_data()\n",
     "\n",
     "# create model\n",
-    "model = Model(4,\n",
+    "original_model = Transformer(4,\n",
     "                tokenizer.vocab_size,\n",
     "                BASELINE_MODEL_NUMBER_OF_LAYERS,\n",
     "                BASELINE_MODEL_NUMBER_OF_HEADS,\n",
     "                BASELINE_MODEL_DIM)\n",
     "\n",
+    "\n",
+    "\n",
     "# model = quantizer(model, 8, True)\n",
     "\n",
-    "# model = ModelQuant(4,\n",
-    "#                 tokenizer.vocab_size,\n",
-    "#                 BASELINE_MODEL_NUMBER_OF_LAYERS,\n",
-    "#                 BASELINE_MODEL_NUMBER_OF_HEADS,\n",
-    "#                 BASELINE_MODEL_DIMENSION)\n",
+    "\n",
+    "model = fullyQuantModel(4,\n",
+    "                tokenizer.vocab_size,\n",
+    "                BASELINE_MODEL_NUMBER_OF_LAYERS,\n",
+    "                BASELINE_MODEL_NUMBER_OF_HEADS,\n",
+    "                BASELINE_MODEL_DIM)\n",
+    "\n",
+    "\n",
     "\n",
     "model.model_name = 'transformer'\n",
     "\n",
@@ -62,21 +71,27 @@
     "loss_fn = nn.CrossEntropyLoss()\n",
     "\n",
     "# simple optimizer\n",
+    "optim_original = Adam(original_model.parameters(), lr= 1e-4)\n",
+    "scheduler_original = MultiStepLR(optim_original, milestones=[10,15], gamma=0.1)\n",
     "optim = Adam(model.parameters(), lr= 1e-4)\n",
-    "scheduler = MultiStepLR(optim, milestones=[10,15], gamma=0.1)\n",
+    "scheduler = MultiStepLR(optim_original, milestones=[10,15], gamma=0.1)\n",
     "\n",
-    "train_config ={'model': model,\n",
+    "train_config ={'model_original': original_model,\n",
+    "               'model': model,\n",
     "               'loss_fn': loss_fn,\n",
+    "               'optim_original': optim_original,\n",
     "               'optim': optim,\n",
     "               'datasets': [train_dl, test_dl],\n",
     "               'epochs': 10,\n",
     "               'batch_size': BATCH_SIZE,\n",
+    "               'scheduler_original': scheduler_original,\n",
     "               'scheduler': scheduler,\n",
     "               'exp_name': \"quant_all\",\n",
+    "               'epoch_start_quantization': 1\n",
     "               }\n",
     "\n",
     "# training\n",
-    "learner_ag_news = Learner(train_config)"
+    "learner_ag_news = ema_learner(train_config)"
    ],
    "metadata": {
     "collapsed": false,
