--- a/plot.ipynb
+++ b/plot.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 74,
    "id": "f630faa7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -17,7 +21,11 @@
    "cell_type": "code",
    "execution_count": 75,
    "id": "e1d60f2b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def plot_train_log(file_path, loss_or_acc):\n",
@@ -56,7 +64,11 @@
    "cell_type": "code",
    "execution_count": 78,
    "id": "103536d4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -94,7 +106,11 @@
    "cell_type": "code",
    "execution_count": 80,
    "id": "2f87127e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -125,7 +141,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6658ad2a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
