--- a/main.ipynb
+++ b/main.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "id": "5d29b0aa",
    "metadata": {
     "pycharm": {
@@ -46,11 +46,104 @@
     "from utils.training import Learner\n",
     "\n",
     "from quantization.binarize import binarize, IRLinear\n",
-    "from quantization.transformer_raw import Transformer\n",
+    "from quantization.transformer import Transformer\n",
+    "from quantization.quantize import quantizer\n",
+    "from quantization.pytorch_api import ModelQuant\n",
+    "from quantization.fully_quantize import Model as fullyQuantModel\n",
     "\n",
     "from utils.train_utils import change_t\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "49ac3637",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_model(vocab_size, quant_type=None, quant_method=None, bit_num=None, quant_pattern=None):\n",
+    "    '''\n",
+    "    Create training model based on sepcified quant_type\n",
+    "    ----------\n",
+    "    Arguments:\n",
+    "    quant_type    - quant type, should be one of [None, 'quantization', 'binarization']\n",
+    "    quant_method  - quant method to use, if quant_type is None, it should also be None\n",
+    "                    For 'quantization', should be one of ['basic', 'pytorch', 'fully']\n",
+    "                    For 'binarization', should be one of ['basic', 'ir']\n",
+    "    bit_num       - bit number for each parameter, only works when quant_type is 'quantization'\n",
+    "                    should be one of [8,4,2]\n",
+    "    quant_pattern - quantization pattern, should be one of ['MHA', 'FFN', 'CLS', 'ALL']\n",
+    "    '''\n",
+    "    model = Transformer(d_model=BASELINE_MODEL_DIM,\n",
+    "                             d_ff=BASELINE_FFN_DIM,\n",
+    "                             d_hidden=BASELINE_HIDDEN_DIM,\n",
+    "                             h=BASELINE_MODEL_NUMBER_OF_HEADS,\n",
+    "                             n_layers=BASELINE_MODEL_NUMBER_OF_LAYERS,\n",
+    "                             n_class=4,\n",
+    "                             vocab=vocab_size\n",
+    "                            )\n",
+    "    \n",
+    "    __quant_type__ = [None,'quantization','binarization']\n",
+    "    __bit_num__ = [None,8,4,2]\n",
+    "    __quant_pattern__ = [None,'MHA', 'FFN', 'CLS', 'ALL']\n",
+    "    \n",
+    "    assert quant_type in __quant_type__, f\"Unimplemented quantization type, should be one of {__quant_type__}, got '{quant_type}'!\"\n",
+    "    assert bit_num in __bit_num__, f\"Unimplemented bit number, should be one of {__bit_num__}, got '{bit_num}'!\"\n",
+    "    assert quant_pattern in __quant_pattern__, f\"Unimplemented quantization method, should be one of {__quant_pattern__}, got '{quant_pattern}'!\"\n",
+    "    \n",
+    "    if quant_type == None:\n",
+    "        if quant_method is not None:\n",
+    "            print(f\"Quant method {quant_method} will not work in baseline model!\")\n",
+    "        if bit_num is not None:\n",
+    "            print(f\"Bit number {bit_num} will not work in baseline model!\")\n",
+    "        if quant_pattern is not None:\n",
+    "            print(f\"Quant pattern {quant_pattern} will not work in baseline model!\")\n",
+    "    \n",
+    "    elif quant_type == 'quantization':\n",
+    "        __quant_method__ = ['basic', 'pytorch', 'fully']\n",
+    "        \n",
+    "        assert quant_method in __quant_method__, f\"Unimplemented quantization method, should be one of {__quant_method__}, got '{quant_method}'!\"\n",
+    "        assert bit_num != None, f\"Bit number can not be None!\"\n",
+    "        assert quant_pattern != None, f\"Quant pattern can not be None!\"\n",
+    "        \n",
+    "        if quant_method == 'basic':\n",
+    "            if quant_pattern != 'ALL':\n",
+    "                print(f\"Current quant method {quant_method} can only quantize the whole network, quant pattern {quant_pattern} will not work!\")\n",
+    "            model = quantizer(model, bit_num, True)\n",
+    "            \n",
+    "        elif quant_method == 'pytorch':\n",
+    "            model = ModelQuant(d_model=BASELINE_MODEL_DIM,\n",
+    "                               d_ff=BASELINE_FFN_DIM,\n",
+    "                               d_hidden=BASELINE_HIDDEN_DIM,\n",
+    "                               h=BASELINE_MODEL_NUMBER_OF_HEADS,\n",
+    "                               n_layers=BASELINE_MODEL_NUMBER_OF_LAYERS,\n",
+    "                               n_class=4,\n",
+    "                               vocab=tokenizer.vocab_size,\n",
+    "                               quant_ffn=((quant_pattern == 'FFN')|(quant_pattern == 'ALL')),\n",
+    "                               quant_mha=((quant_pattern == 'MHA')|(quant_pattern == 'ALL')),\n",
+    "                               quant_classifier=((quant_pattern == 'CLS')|(quant_pattern == 'ALL')),\n",
+    "                               bit_num=bit_num)\n",
+    "            \n",
+    "        elif quant_method == 'fully':\n",
+    "            print(\"For fully_quantized model, bit number and quant pattern will not work!\")\n",
+    "            model = fullyQuantModel(4,\n",
+    "                tokenizer.vocab_size,\n",
+    "                BASELINE_MODEL_NUMBER_OF_LAYERS,\n",
+    "                BASELINE_MODEL_NUMBER_OF_HEADS,\n",
+    "                BASELINE_MODEL_DIM)\n",
+    "            \n",
+    "    elif quant_type == 'binarization':\n",
+    "        __quant_method__ = ['basic', 'ir']\n",
+    "        assert quant_method in __quant_method__, f\"Unimplemented quantization method, should be one of {__quant_method__}, got '{quant_method}'!\"\n",
+    "        assert quant_pattern != None, f\"Quant pattern can not be None!\"\n",
+    "        print(f\"For binarization model, bit num will not work!\")\n",
+    "        \n",
+    "        binarize(model, quant_pattern, skip_final=True, qk_only=True)\n",
+    "    \n",
+    "    return model\n",
+    "    "
    ]
   },
   {
@@ -870,14 +963,6 @@
     "total = count_memory_size(model) - count_memory_size(model.input_embeddings)\n",
     "for name, layer in model.named_children():\n",
     "    print(f'{name}: {count_memory_size(layer)/total}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4d2bb379",
-   "metadata": {},
-   "source": [
-    "# IR net (binarization)"
    ]
   }
  ],
