--- a/main_quant.ipynb
+++ b/main_quant.ipynb
@@ -2,12 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import torch\n",
@@ -32,33 +27,18 @@
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/torch/utils/data/datapipes/utils/common.py:25: UserWarning: Lambda function is not supported for pickle, please use regular python function or functools.partial instead.\n",
-      "  \"Lambda function is not supported for pickle, please use \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "original model received!\n"
-     ]
-    }
-   ],
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# load dataset\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-uncased\")\n",
@@ -71,16 +51,14 @@
     "                BASELINE_MODEL_NUMBER_OF_HEADS,\n",
     "                BASELINE_MODEL_DIM)\n",
     "\n",
+    "# model = quantizer(model, 8, True)\n",
     "\n",
     "\n",
-    "model = quantizer(original_model, 8, True)\n",
-    "\n",
-    "\n",
-    "# model = fullyQuantModel(4,\n",
-    "#                 tokenizer.vocab_size,\n",
-    "#                 BASELINE_MODEL_NUMBER_OF_LAYERS,\n",
-    "#                 BASELINE_MODEL_NUMBER_OF_HEADS,\n",
-    "#                 BASELINE_MODEL_DIM)\n",
+    "model = fullyQuantModel(4,\n",
+    "                tokenizer.vocab_size,\n",
+    "                BASELINE_MODEL_NUMBER_OF_LAYERS,\n",
+    "                BASELINE_MODEL_NUMBER_OF_HEADS,\n",
+    "                BASELINE_MODEL_DIM)\n",
     "\n",
     "# loss func\n",
     "loss_fn = nn.CrossEntropyLoss()\n",
@@ -107,84 +85,86 @@
     "\n",
     "# training\n",
     "learner_ag_news = ema_learner(train_config)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Transformer(\n",
-      "  (input_embeddings): Embeddings(\n",
-      "    (token_embedding): Embedding(30522, 512)\n",
-      "    (pos_embedding): Embedding(512, 512)\n",
-      "  )\n",
-      "  (input_encodings): PositionalEncoding(\n",
-      "    (dropout): Dropout(p=0.1, inplace=False)\n",
-      "  )\n",
-      "  (sublayer_attention): ModuleList(\n",
-      "    (0): sublayerConnectionAttention(\n",
-      "      (multiheads): MultiheadAttention(\n",
-      "        (heads): ModuleList(\n",
-      "          (0): QuantizedLinear(in_features=512, out_features=512, bias=True)\n",
-      "          (1): QuantizedLinear(in_features=512, out_features=512, bias=True)\n",
-      "          (2): QuantizedLinear(in_features=512, out_features=512, bias=True)\n",
-      "        )\n",
-      "        (output): QuantizedLinear(in_features=512, out_features=512, bias=True)\n",
-      "        (dropout): Dropout(p=0.1, inplace=False)\n",
-      "      )\n",
-      "      (layernorm): LayerNorm()\n",
-      "      (dropout): Dropout(p=0.1, inplace=False)\n",
-      "    )\n",
-      "    (1): sublayerConnectionAttention(\n",
-      "      (multiheads): MultiheadAttention(\n",
-      "        (heads): ModuleList(\n",
-      "          (0): QuantizedLinear(in_features=512, out_features=512, bias=True)\n",
-      "          (1): QuantizedLinear(in_features=512, out_features=512, bias=True)\n",
-      "          (2): QuantizedLinear(in_features=512, out_features=512, bias=True)\n",
-      "        )\n",
-      "        (output): QuantizedLinear(in_features=512, out_features=512, bias=True)\n",
-      "        (dropout): Dropout(p=0.1, inplace=False)\n",
-      "      )\n",
-      "      (layernorm): LayerNorm()\n",
-      "      (dropout): Dropout(p=0.1, inplace=False)\n",
-      "    )\n",
-      "  )\n",
-      "  (sublayer_ffn): ModuleList(\n",
-      "    (0): sublayerConnectionFFN(\n",
-      "      (ffn): PositionalWiseFFN(\n",
-      "        (w_1): QuantizedLinear(in_features=512, out_features=1024, bias=True)\n",
-      "        (w_2): QuantizedLinear(in_features=1024, out_features=512, bias=True)\n",
-      "        (dropout): Dropout(p=0.1, inplace=False)\n",
-      "      )\n",
-      "      (layernorm): LayerNorm()\n",
-      "      (dropout): Dropout(p=0.1, inplace=False)\n",
-      "    )\n",
-      "    (1): sublayerConnectionFFN(\n",
-      "      (ffn): PositionalWiseFFN(\n",
-      "        (w_1): QuantizedLinear(in_features=512, out_features=1024, bias=True)\n",
-      "        (w_2): QuantizedLinear(in_features=1024, out_features=512, bias=True)\n",
-      "        (dropout): Dropout(p=0.1, inplace=False)\n",
-      "      )\n",
-      "      (layernorm): LayerNorm()\n",
-      "      (dropout): Dropout(p=0.1, inplace=False)\n",
-      "    )\n",
-      "  )\n",
-      "  (classifier): Classifier(\n",
-      "    (hidden): Linear(in_features=512, out_features=1024, bias=True)\n",
-      "    (classifier): Linear(in_features=1024, out_features=4, bias=True)\n",
-      "  )\n",
-      ")\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "print(model)"
-   ]
+    "# load dataset\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-uncased\")\n",
+    "train_dl, test_dl = AG_NEWS_DATASET(tokenizer, batch_size = BATCH_SIZE).load_data()\n",
+    "\n",
+    "# create model\n",
+    "original_model = Transformer(4,\n",
+    "                tokenizer.vocab_size,\n",
+    "                BASELINE_MODEL_NUMBER_OF_LAYERS,\n",
+    "                BASELINE_MODEL_NUMBER_OF_HEADS,\n",
+    "                BASELINE_MODEL_DIM)\n",
+    "\n",
+    "model = quantizer(original_model, 2, True)\n",
+    "# model = ModelQuant(4,\n",
+    "#                 tokenizer.vocab_size,\n",
+    "#                 BASELINE_MODEL_NUMBER_OF_LAYERS,\n",
+    "#                 BASELINE_MODEL_NUMBER_OF_HEADS,\n",
+    "#                 BASELINE_MODEL_DIM)\n",
+    "\n",
+    "# loss func\n",
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "\n",
+    "# baseline training config -> do not change!\n",
+    "optim = Adam(model.parameters(), lr= 1e-4)\n",
+    "scheduler = MultiStepLR(optim, milestones=[10,15], gamma=0.1)\n",
+    "\n",
+    "train_config = {'model': model, 'loss_fn': loss_fn, 'optim': optim, 'scheduler': scheduler,\n",
+    "                'datasets': [train_dl, test_dl], 'epochs': 10, 'batch_size': BATCH_SIZE,\n",
+    "                'exp_name': 'transformer_quantization_BASELINE_2bit_ALL'}\n",
+    "\n",
+    "# train_config['exp_name'] = 'transformer_quantization_PYTORCHAPI_8bit_ALL'\n",
+    "\n",
+    "# training\n",
+    "learner_ag_news = Learner(train_config)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "learner_ag_news.train()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
