--- a/main.ipynb
+++ b/main.ipynb
@@ -60,7 +60,11 @@
    "cell_type": "code",
    "execution_count": 69,
    "id": "49ac3637",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def create_model(vocab_size, quant_type=None, quant_method=None, bit_num=None, quant_pattern=None):\n",
@@ -268,7 +272,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "0a9d342d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
