--- a/main_quant.ipynb
+++ b/main_quant.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import torch\n",
@@ -96,20 +96,133 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
    "outputs": [],
    "source": [
-    "print(model)"
-   ]
+    "torch.cuda.empty_cache()\n",
+    "learner_ag_news.train()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Hu Mingzhe\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\torch\\utils\\data\\datapipes\\utils\\common.py:25: UserWarning: Lambda function is not supported for pickle, please use regular python function or functools.partial instead.\n",
+      "  \"Lambda function is not supported for pickle, please use \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key bert.embeddings.word_embeddings.weight\n",
+      "shape torch.Size([30522, 512])\n",
+      "key bert.embeddings.position_embeddings.weight\n",
+      "shape torch.Size([512, 512])\n",
+      "key bert.embeddings.token_type_embeddings.weight\n",
+      "shape torch.Size([2, 512])\n",
+      "key bert.embeddings.LayerNorm.weight\n",
+      "shape torch.Size([512])\n",
+      "key bert.embeddings.LayerNorm.bias\n",
+      "shape torch.Size([512])\n",
+      "key bert.encoder.layer.0.attention.self.query.weight\n",
+      "shape torch.Size([512, 512])\n",
+      "key bert.encoder.layer.0.attention.self.query.bias\n",
+      "shape torch.Size([512])\n",
+      "key bert.encoder.layer.0.attention.self.key.weight\n",
+      "shape torch.Size([512, 512])\n",
+      "key bert.encoder.layer.0.attention.self.key.bias\n",
+      "shape torch.Size([512])\n",
+      "key bert.encoder.layer.0.attention.self.value.weight\n",
+      "shape torch.Size([512, 512])\n",
+      "key bert.encoder.layer.0.attention.self.value.bias\n",
+      "shape torch.Size([512])\n",
+      "key bert.encoder.layer.0.attention.output.dense.weight\n",
+      "shape torch.Size([512, 512])\n",
+      "key bert.encoder.layer.0.attention.output.dense.bias\n",
+      "shape torch.Size([512])\n",
+      "key bert.encoder.layer.0.attention.output.LayerNorm.weight\n",
+      "shape torch.Size([512])\n",
+      "key bert.encoder.layer.0.attention.output.LayerNorm.bias\n",
+      "shape torch.Size([512])\n",
+      "key bert.encoder.layer.0.intermediate.dense.weight\n",
+      "shape torch.Size([2048, 512])\n",
+      "key bert.encoder.layer.0.intermediate.dense.bias\n",
+      "shape torch.Size([2048])\n",
+      "key bert.encoder.layer.0.output.dense.weight\n",
+      "shape torch.Size([512, 2048])\n",
+      "key bert.encoder.layer.0.output.dense.bias\n",
+      "shape torch.Size([512])\n",
+      "key bert.encoder.layer.0.output.LayerNorm.weight\n",
+      "shape torch.Size([512])\n",
+      "key bert.encoder.layer.0.output.LayerNorm.bias\n",
+      "shape torch.Size([512])\n",
+      "key bert.encoder.layer.1.attention.self.query.weight\n",
+      "shape torch.Size([512, 512])\n",
+      "key bert.encoder.layer.1.attention.self.query.bias\n",
+      "shape torch.Size([512])\n",
+      "key bert.encoder.layer.1.attention.self.key.weight\n",
+      "shape torch.Size([512, 512])\n",
+      "key bert.encoder.layer.1.attention.self.key.bias\n",
+      "shape torch.Size([512])\n",
+      "key bert.encoder.layer.1.attention.self.value.weight\n",
+      "shape torch.Size([512, 512])\n",
+      "key bert.encoder.layer.1.attention.self.value.bias\n",
+      "shape torch.Size([512])\n",
+      "key bert.encoder.layer.1.attention.output.dense.weight\n",
+      "shape torch.Size([512, 512])\n",
+      "key bert.encoder.layer.1.attention.output.dense.bias\n",
+      "shape torch.Size([512])\n",
+      "key bert.encoder.layer.1.attention.output.LayerNorm.weight\n",
+      "shape torch.Size([512])\n",
+      "key bert.encoder.layer.1.attention.output.LayerNorm.bias\n",
+      "shape torch.Size([512])\n",
+      "key bert.encoder.layer.1.intermediate.dense.weight\n",
+      "shape torch.Size([2048, 512])\n",
+      "key bert.encoder.layer.1.intermediate.dense.bias\n",
+      "shape torch.Size([2048])\n",
+      "key bert.encoder.layer.1.output.dense.weight\n",
+      "shape torch.Size([512, 2048])\n",
+      "key bert.encoder.layer.1.output.dense.bias\n",
+      "shape torch.Size([512])\n",
+      "key bert.encoder.layer.1.output.LayerNorm.weight\n",
+      "shape torch.Size([512])\n",
+      "key bert.encoder.layer.1.output.LayerNorm.bias\n",
+      "shape torch.Size([512])\n",
+      "key bert.pooler.dense.weight\n",
+      "shape torch.Size([512, 512])\n",
+      "key bert.pooler.dense.bias\n",
+      "shape torch.Size([512])\n",
+      "key cls.predictions.bias\n",
+      "shape torch.Size([30522])\n",
+      "key cls.predictions.transform.dense.weight\n",
+      "shape torch.Size([512, 512])\n",
+      "key cls.predictions.transform.dense.bias\n",
+      "shape torch.Size([512])\n",
+      "key cls.predictions.transform.LayerNorm.weight\n",
+      "shape torch.Size([512])\n",
+      "key cls.predictions.transform.LayerNorm.bias\n",
+      "shape torch.Size([512])\n",
+      "key cls.predictions.decoder.weight\n",
+      "shape torch.Size([30522, 512])\n",
+      "key cls.predictions.decoder.bias\n",
+      "shape torch.Size([30522])\n",
+      "key cls.seq_relationship.weight\n",
+      "shape torch.Size([2, 512])\n",
+      "key cls.seq_relationship.bias\n",
+      "shape torch.Size([2])\n"
+     ]
+    }
+   ],
    "source": [
     "# load dataset\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-uncased\")\n",
@@ -123,11 +236,7 @@
     "                BASELINE_MODEL_DIM)\n",
     "\n",
     "model = quantizer(original_model, 2, True)\n",
-    "# model = ModelQuant(4,\n",
-    "#                 tokenizer.vocab_size,\n",
-    "#                 BASELINE_MODEL_NUMBER_OF_LAYERS,\n",
-    "#                 BASELINE_MODEL_NUMBER_OF_HEADS,\n",
-    "#                 BASELINE_MODEL_DIM)\n",
+    "\n",
     "\n",
     "# loss func\n",
     "loss_fn = nn.CrossEntropyLoss()\n",
@@ -155,20 +264,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "learner_ag_news.train()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -176,6 +271,7 @@
    },
    "outputs": [],
    "source": [
+    "torch.cuda.empty_cache()\n",
     "learner_ag_news.train()"
    ]
   }
