--- a/plot.ipynb
+++ b/plot.ipynb
@@ -343,7 +343,11 @@
   {
    "cell_type": "markdown",
    "id": "7a98be41",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Test of effect of final layer"
    ]
@@ -352,7 +356,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "e3836ea1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -398,7 +406,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "6b2b0f6a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -446,7 +458,11 @@
   {
    "cell_type": "markdown",
    "id": "fdd13190",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Test of effect of only quantifying QK without V"
    ]
@@ -455,7 +471,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "d39b0c23",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -501,7 +521,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "c670b5eb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -549,7 +573,11 @@
   {
    "cell_type": "markdown",
    "id": "1bc4633b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Comparison between basic binarization and IR net"
    ]
@@ -558,7 +586,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "e68dde16",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -604,7 +636,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "78919adc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -653,7 +689,12 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
